# arguelauncher

./: .gitignore  Dockerfile  README.md  convert_requests.py  flake.nix  pyproject.toml
arguelauncher/: app.py  config.py  config.yaml  model.py  validate.py
arguelauncher/algorithms/: graph2text.py
arguelauncher/config/: __init__.py  adaptation.py  app.yaml  arguegen.py  cbr.py  cbr.yaml  cbr_run.yaml  nlp.py  retrieval.py
arguelauncher/services/: adaptation.py  evaluation.py  exporter.py  retrieval.py
data/cases/: .gitignore  microtexts-v2.dvc  microtexts.dvc  persuasive-essays.dvc
data/requests/microtexts-generalization-expert1/allow_shops_to_open_on_holidays_and_sundays/: nodeset6375.json  nodeset6410.json  nodeset6449.json  nodeset6457.json  nodeset6462.json
data/requests/microtexts-generalization-expert1/cap_rent_increases/: nodeset6369.json  nodeset6377.json  nodeset6384.json  nodeset6455.json
data/requests/microtexts-generalization-expert1/charge_tuition_fees/: nodeset6388.json  nodeset6394.json  nodeset6407.json  nodeset6447.json
data/requests/microtexts-generalization-expert1/health_insurance_cover_complementary_medicine/: nodeset6363.json  nodeset6370.json  nodeset6386.json
data/requests/microtexts-retrieval-complex/: allow_shops_to_open_on_holidays_and_sundays.json  cap_rent_increases.json  charge_tuition_fees.json  eu_influence_on_political_events_in_ukraine.json  health_insurance_cover_complementary_medicine.json  higher_dog_poo_fines.json  increase_weight_of_ba_thesis_in_final_grade.json  introduce_capital_punishment.json  keep_retirement_at_63.json  make_video_games_olympic.json  over_the_counter_morning_after_pill.json  public_broadcasting_fees_on_demand.json  school_uniforms.json  stricter_regulation_of_intelligence_services.json  txl_airport_remain_operational_after_ber_opening.json
data/requests/microtexts-retrieval-simple/: death1.json  death2.json  death3.json  death4.json  dog1.json  dog2.json  dog3.json  dog4.json  med1.json  med2.json  med3.json  med4.json  media1.json  media2.json  media3.json  media4.json  rent1.json  rent2.json  rent3.json  rent4.json  tuition1.json  tuition2.json  tuition3.json  tuition4.json
(+176 files in other folders)
