[tool.poetry]
name = "arguelauncher"
version = "1.0.0"
description = "Evaluation framework for argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
typer = "^0.7.0"
nlp-service = "^1.4.0"
arg-services = "^1.3.0"
arguebuf = { version = "^2.0.0b23", allow-prereleases = true }
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"
rich = "^13.3.4"
typing-extensions = "^4.5.0"
scikit-learn = "^1.2.2"
ranx = "^0.3.7"
numba = { version = "^0.57.0rc1", allow-prereleases = true }
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
