[tool.poetry]
name = "arguelauncher"
version = "1.0.0"
description = "Evaluation framework for argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
typer = "^0.9.0"
nlp-service = "^1.4.1"
arg-services = "^1.3.1"
arguebuf = { version = "^2.0.0b23", allow-prereleases = true }
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"
rich = "^13.3.5"
typing-extensions = "^4.6.0"
scikit-learn = "^1.2.2"
ranx = "^0.3.8"
numba = "^0.57.0"
pandas = "^2.0.1"
lemminflect = "^0.2.3"
orjson = "3.8.9"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
