[tool.poetry]
name = "arguelauncher"
version = "1.0.0"
description = "Evaluation framework for argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
typer = "^0.9.0"
nlp-service = "^1.4.9"
arg-services = "^1.4.0"
arguebuf = { version = "^2.1.1", allow-prereleases = true }
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"
rich = "^13.4.2"
typing-extensions = "^4.7.1"
scikit-learn = "^1.3.0"
ranx = "^0.3.14"
numba = "^0.57.1"
pandas = "^2.0.3"
lemminflect = "^0.2.3"
orjson = "3.9.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
